migdb.qvto/transforms/tests/errors/error_removeEntity1c.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_removeEntity1c(out inoutModel : ERR);

main(){
	_errorLog(OrderedSet{_evolutionError(1, "Structure doesn't contains entity called Tab", "evolution_app.qvto")});
}